# flashblocks-ssz-bench

./: Cargo.toml  README.md
src/: main.rs  payload.rs  subscriber.rs
