[package]
name = "flashblocks-ssz-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-rpc-types-eth = { version = "1.0.9" }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
flate2 = "1.0"
ethereum_ssz = "0.9.0"
ethereum_ssz_derive = "0.9.0"
alloy-primitives = "1.1.2"
alloy-rpc-types-engine = { version = "1.0.9", features = ["ssz"] }
alloy-serde = { version = "1.0.9" }
